gcc/testsuite/rust/rustc/ui/suggestions/issue-103112.rs
fn main() {
    std::process::abort!();
// { dg-error ".E0433." "" { target *-*-* } .-1 }
}

